fixed: footer wrapping

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -570,6 +570,8 @@ form button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 .circle-link {
   height: 50px;
