--- a/css/styles.css
+++ b/css/styles.css
@@ -423,6 +423,7 @@ form button {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 .circle-link {
   height: 50px;
